--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "functions": {
-      "api/generate": {
-        "maxDuration": 300 // 300 seconds (5 minutes)
-      }
+  "version": 2,
+  "functions": {
+    "api/generate": {
+      "maxDuration": 300
     }
   }
-  
+}
