change path on vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
     "functions": {
-      "api/generate": {
+      "src/app/api/generate/route.js": {
         "maxDuration": 300
       }
     }
   }
-  
