--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.21.1",
     "anthropic": "^0.0.0",
+    "bootstrap": "^5.3.3",
+    "bulma": "^1.0.1",
     "dompurify": "^3.1.4",
     "encoding": "^0.1.13",
-    "next": "13.4.2",
+    "next": "^14.2.3",
     "openai": "^4.47.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "tailwindscss": "^0.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.19",
