--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "bulma": "^1.0.1",
     "dompurify": "^3.1.4",
     "encoding": "^0.1.13",
+    "flowbite-react": "^0.9.0",
     "next": "^14.2.3",
     "openai": "^4.47.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.2.1",
     "tailwindscss": "^0.3.0"
   },
   "devDependencies": {
